--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -13,7 +13,9 @@ rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 application.js: application-31068dc63ef3a7c28c01b771721787fe.js
 application/index.js: application-31068dc63ef3a7c28c01b771721787fe.js
-application.css: application-0ba10239e8c343f3ea820451df7d1339.css
-application/index.css: application-0ba10239e8c343f3ea820451df7d1339.css
+application.css: application-fae60990db2297ca8e94740dcc31f85b.css
+application/index.css: application-fae60990db2297ca8e94740dcc31f85b.css
 jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
 jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
+cloudinary_cors.html: cloudinary_cors-05f2af4874bd3914c79b03b8d9acd6d1.html
+cloudinary_cors/index.html: cloudinary_cors-05f2af4874bd3914c79b03b8d9acd6d1.html
